# rust-kafka-consumer-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README-SEPARATE.md  README.md  docker-compose.app.yml  docker-compose.kafka.yml  docker-compose.yml  env.example  start-app.sh  start-kafka.sh  stop-app.sh  stop-kafka.sh
logs/: README.md
src/: main.rs  topic_manager.rs
src/config/: mod.rs
src/consumer/: mod.rs
src/producer/: mod.rs
