[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.34", features = ["cmake-build"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
flexi_logger = "0.28"
